--- a/.gitmodules
+++ b/.gitmodules
@@ -3,6 +3,6 @@
 	url = git@github.com:leolani/cltl-face-all.git
 	branch = main
 [submodule "pytorch-template"]
-	path = pytorch-template
+	path = templates/pytorch-template
 	url = https://github.com/vltanh/pytorch-template.git
 	branch = master
