add: effnet.yaml

--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,6 @@ dmypy.json
 
 # Dataset
 meld/
-single-frame-dataset/dev/
-single-frame-dataset/train/
-single-frame-dataset/test/
+data/dev/
+data/train/
+data/test/
