--- a/configs/timesformer.yaml
+++ b/configs/timesformer.yaml
@@ -4,15 +4,16 @@ model:
   name: TimeSformer
   args:
     dim: 512
-    image_size: 112
-    patch_size: 8
+    image_size: 224
+    patch_size: 16
+    channels: 3
     num_frames: 8
     num_classes: 7
     depth: 12
     heads: 8
     dim_head: 64
-    attn_dropout: 0.1
-    ff_dropout: 0.1
+    attn_dropout: 0
+    ff_dropout: 0
 optimizer:
   name: Adam
   args:
@@ -31,17 +32,17 @@ scheduler:
     last_epoch: -1
 dataset:
   train:
-    name: CAER
+    name: MELD
     args:
       balancing: over
-      label_path: /home/tkm290/repos/erc/Datasets/CAER/labels.json
-      videos_dir: /home/tkm290/repos/erc/Datasets/CAER/face-videos/train/
-      # audios_dir: /home/tkm290/repos/erc/Datasets/CAER/raw-audios/train/
-      # texts_dir: /home/tkm290/repos/erc/Datasets/CAER/raw-texts/train/
+      label_path: /home/tkm290/repos/erc/Datasets/MELD/labels.json
+      videos_dir: /home/tkm290/repos/erc/Datasets/MELD/face-videos/train/
+      # audios_dir: /home/tkm290/repos/erc/Datasets/MELD/raw-audios/train/
+      # texts_dir: /home/tkm290/repos/erc/Datasets/MELD/raw-texts/train/
       # faces_dir: 
       every_N: 16
       num_frames: 8
-      image_size: 112
+      image_size: 224
       datatype: train
     loader:
       name: DataLoader
@@ -50,16 +51,16 @@ dataset:
         shuffle: True
         drop_last: False
   val:
-    name: CAER
+    name: MELD
     args:
-      label_path: /home/tkm290/repos/erc/Datasets/CAER/labels.json
-      videos_dir: /home/tkm290/repos/erc/Datasets/CAER/face-videos/val/
-      # audios_dir: /home/tkm290/repos/erc/Datasets/CAER/raw-audios/val/
-      # texts_dir: /home/tkm290/repos/erc/Datasets/CAER/raw-texts/val/
+      label_path: /home/tkm290/repos/erc/Datasets/MELD/labels.json
+      videos_dir: /home/tkm290/repos/erc/Datasets/MELD/face-videos/val/
+      # audios_dir: /home/tkm290/repos/erc/Datasets/MELD/raw-audios/val/
+      # texts_dir: /home/tkm290/repos/erc/Datasets/MELD/raw-texts/val/
       # faces_dir: 
       every_N: 16
       num_frames: 8
-      image_size: 112
+      image_size: 224
       datatype: val
     loader:
       name: DataLoader
