add: F1_weighted metric

--- a/configs/MELD_audio_effnet.yaml
+++ b/configs/MELD_audio_effnet.yaml
@@ -15,7 +15,7 @@ loss:
     name:                       FocalLoss
     args:                       Null
 metric:
-    -   name:                   Accuracy
+    -   name:                   F1Weighted
         args:                   Null
 scheduler:
     name:                       StepLR
