--- a/Datasets/.gitignore
+++ b/Datasets/.gitignore
@@ -3,15 +3,14 @@ DEBUG
 # You should download below yourselves
 MELD.Raw.tar.gz
 IEMOCAP_full_release.tar.gz
-EmotiW_2018.zip
-CAER.zip
+emotion-detection-emotion-detection-1.0.tar.gz
+ijcnlp_dailydialog.zip
 
-AFEW.zip
 IEMOCAP.zip
 MELD.zip
+EmoryNLP.zip
+DailyDialog.zip
 
-CAER-faces.zip
-AFEW-faces.zip
 IEMOCAP-faces.zip
 MELD-faces.zip
 
