--- a/erc-text-huggingface-five-seeds.yaml
+++ b/erc-text-huggingface-five-seeds.yaml
@@ -1,6 +1,11 @@
 DATASET: MELD
 model_checkpoint: roberta-large
 speaker_mode: 'upper'
-num_past_utterances: 2
-num_future_utterances: 0
-BATCH_SIZE: 16
+num_past_utterances: 0
+num_future_utterances: 1000
+BATCH_SIZE: 4
+ONLY_UPTO: 103
+NUM_TRAIN_EPOCHS: 5
+WEIGHT_DECAY: 0.01
+WARMUP_RATIO: 0.2
+N_TRIALS: 5
