--- a/train-erc-text1.yaml
+++ b/train-erc-text1.yaml
@@ -1,9 +1,9 @@
-DATASET: MELD
+DATASET: IEMOCAP
 model_checkpoint: roberta-large
 num_past_utterances: 1000
-num_future_utterances: 0
+num_future_utterances: 1000
 BATCH_SIZE: 4
-HP_ONLY_UPTO: 103
+HP_ONLY_UPTO: 10
 NUM_TRAIN_EPOCHS: 5
 WEIGHT_DECAY: 0.01
 WARMUP_RATIO: 0.2
@@ -14,7 +14,7 @@ SEEDS:
 - 2
 - 3
 - 4
-ADD_BOU_EOU: true
+ADD_BOU_EOU: false
 ADD_SPEAKER_TOKENS: true
 REPLACE_NAMES_IN_UTTERANCES: false # having this true had a very bad effect. So weird.
 SPEAKER_SPLITS:
