--- a/train-erc-text4.yaml
+++ b/train-erc-text4.yaml
@@ -1,8 +1,8 @@
 DATASET: MELD
 model_checkpoint: roberta-large
-num_past_utterances: 1000
+num_past_utterances: 0
 num_future_utterances: 0
-BATCH_SIZE: 4
+BATCH_SIZE: 16
 HP_ONLY_UPTO: 103
 NUM_TRAIN_EPOCHS: 5
 WEIGHT_DECAY: 0.01
@@ -14,7 +14,7 @@ SEEDS:
 - 2
 - 3
 - 4
-ADD_BOU_EOU: true
+ADD_BOU_EOU: false
 ADD_SPEAKER_TOKENS: true
 REPLACE_NAMES_IN_UTTERANCES: false # having this true had a very bad effect. So weird.
 SPEAKER_SPLITS:
