--- a/train-erc-text-4.yaml
+++ b/train-erc-text-4.yaml
@@ -15,8 +15,8 @@ SEEDS:
 - 3
 - 4
 ADD_BOU: true
-ADD_EOU: false
-ADD_SPEAKER_TOKENS: true
+ADD_EOU: true
+ADD_SPEAKER_TOKENS: false
 REPLACE_NAMES_IN_UTTERANCES: false # having this true had a very bad effect. So weird.
 SPEAKER_SPLITS:
  - train
