--- a/train-erc-text-0.yaml
+++ b/train-erc-text-0.yaml
@@ -1,9 +1,9 @@
-DATASET: IEMOCAP
+DATASET: MELD
 model_checkpoint: roberta-large
 num_past_utterances: 1000
-num_future_utterances: 0
+num_future_utterances: 1000
 BATCH_SIZE: 4
-HP_ONLY_UPTO: 10
+HP_ONLY_UPTO: 103
 NUM_TRAIN_EPOCHS: 5
 WEIGHT_DECAY: 0.01
 WARMUP_RATIO: 0.2
@@ -14,11 +14,14 @@ SEEDS:
 - 2
 - 3
 - 4
-ADD_BOU: false
-ADD_EOU: false
+ADD_BOU: true
+ADD_EOU: true
 ADD_SPEAKER_TOKENS: true
 REPLACE_NAMES_IN_UTTERANCES: false # having this true had a very bad effect. So weird.
 SPEAKER_SPLITS:
  - train
  - val
  - test
+
+max_model_input_size: 512
+ROOT_DIR: './multimodal-datasets/' # dir for the datasets 
