--- a/train-erc-text-2.yaml
+++ b/train-erc-text-2.yaml
@@ -1,7 +1,7 @@
 DATASET: MELD
 model_checkpoint: roberta-large
 num_past_utterances: 1000
-num_future_utterances: 1000
+num_future_utterances: 0
 BATCH_SIZE: 4
 HP_ONLY_UPTO: 103
 NUM_TRAIN_EPOCHS: 5
@@ -14,9 +14,9 @@ SEEDS:
 - 2
 - 3
 - 4
-ADD_BOU: true
-ADD_EOU: true
-ADD_SPEAKER_TOKENS: false
+ADD_BOU: false
+ADD_EOU: false
+ADD_SPEAKER_TOKENS: true
 REPLACE_NAMES_IN_UTTERANCES: false # having this true had a very bad effect. So weird.
 SPEAKER_SPLITS:
  - train
