--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.7.6
+asttokens==2.0.5
 attrs==21.4.0
 autopage==0.5.0
+backcall==0.2.0
 black==22.1.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
@@ -9,6 +11,10 @@ cliff==3.10.0
 cmaes==0.8.2
 cmd2==2.3.3
 colorlog==6.6.0
+debugpy==1.5.1
+decorator==5.1.1
+entrypoints==0.4
+executing==0.8.3
 filelock==3.6.0
 flake8==4.0.1
 greenlet==1.1.2
@@ -16,28 +22,44 @@ huggingface-hub==0.4.0
 idna==3.3
 importlib-metadata==4.2.0
 importlib-resources==5.4.0
+ipykernel==6.9.1
+ipython==8.1.1
 isort==5.10.1
+jedi==0.18.1
 joblib==1.1.0
+jupyter-client==7.1.2
+jupyter-core==4.9.2
 Mako==1.1.6
 markdown-it-py==2.0.1
 MarkupSafe==2.1.0
+matplotlib-inline==0.1.3
 mccabe==0.6.1
 mdformat==0.7.13
 mdurl==0.1.0
 mypy-extensions==0.4.3
+nest-asyncio==1.5.4
 numpy==1.21.5
 optuna==2.10.0
 packaging==21.3
+parso==0.8.3
 pathspec==0.9.0
 pbr==5.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.0.1
 platformdirs==2.5.0
 prettytable==3.1.1
+prompt-toolkit==3.0.28
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pycodestyle==2.8.0
 pyflakes==2.4.0
+Pygments==2.11.2
 pyparsing==3.0.7
 pyperclip==1.8.2
+python-dateutil==2.8.2
 PyYAML==6.0
+pyzmq==22.3.0
 regex==2022.1.18
 requests==2.27.1
 sacremoses==0.0.47
@@ -45,14 +67,18 @@ scikit-learn==1.0.2
 scipy==1.7.3
 six==1.16.0
 SQLAlchemy==1.4.31
+stack-data==0.2.0
 stevedore==3.5.0
 threadpoolctl==3.1.0
+tokenize-rt==4.2.1
 tokenizers==0.11.5
 tomli==2.0.1
 torch==1.10.2
 torchaudio==0.10.2
 torchvision==0.11.3
+tornado==6.1
 tqdm==4.62.3
+traitlets==5.1.1
 transformers==4.16.2
 typed-ast==1.5.2
 typing_extensions==4.1.1
